--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_splash">手机助手</string>
+    <string name="sample_device_admin_description">设备管理员的描述信息，开启后一键锁屏</string>
+    <string name="sample_device_admin">一键锁屏</string>
 
 </resources>
